<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">



        <TextView
            android:id="@+id/nameLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/label_name" />

        <TextView
            android:id="@+id/nameTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1" />



        <TextView
            android:id="@+id/phoneLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/label_phone" />

        <TextView
            android:id="@+id/phoneTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_call"
            android:layout_row="1"
            android:layout_column="1"
            android:clickable="true"
            android:onClick="dialContactPhone" />



        <TextView
            android:id="@+id/emailLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/label_email" />

        <TextView
            android:id="@+id/emailTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_email"
            android:layout_row="2"
            android:layout_column="1"
            android:clickable="true"
            android:onClick="sendEmail" />



        <TextView
            android:id="@+id/streetLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/label_street" />

        <TextView
            android:id="@+id/streetTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1" />



        <TextView
            android:id="@+id/cityLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/label_city" />

        <TextView
            android:id="@+id/cityTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1" />



        <TextView
            android:id="@+id/indexLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/label_index" />

        <TextView
            android:id="@+id/indexTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1" />



        <TextView
            android:id="@+id/stateLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:text="@string/label_state" />

        <TextView
            android:id="@+id/stateTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="1" />



        <TextView
            android:id="@+id/notesLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="0"
            android:text="@string/label_notes" />

        <TextView
            android:id="@+id/notesTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="1" />


    </GridLayout>

</ScrollView>